@@ -45,6 +45,13 @@ RANLIB = @RANLIB@
 RC = @RC@
 DLLTOOL = @DLLTOOL@
 
+# The default library combination
+library_combo = @ac_cv_library_combo@
+
+ifeq ($(GNUSTEP_TARGET_OS),nextstep4)
+library_combo = nx_nx_nx_nil
+endif
+
 #
 # X Window System headers and libraries
 #
